// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionButton rendering matches the expected snapshot when active 1`] = `
.c0 {
  color: var(--primary-text-color);
  background-color: var(--primary-background-color);
  color: var(--secondary-text-color);
  background-color: var(--secondary-background-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  padding: 20px 25px;
  width: 100%;
  text-align: left;
  font-size: 1.5rem;
  font-weight: 700;
}

.c0:hover {
  background-color: var(--accent-background-color);
}

.c1 {
  color: var(--primary-text-color);
  background-color: var(--primary-background-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  padding: 20px 25px;
  width: 100%;
  text-align: left;
  font-size: 1.5rem;
  font-weight: 700;
}

.c1:hover {
  background-color: var(--accent-background-color);
}

.c2 {
  font-size: 1.3rem;
  padding: 10px 50px;
}

<div>
  <button
    className="c0"
    onClick={[Function]}
    type="button"
  >
    LIST IS ACTIVE
  </button>
  <button
    className="c1 c2"
    onClick={[Function]}
    type="button"
  >
    foo
  </button>
  <button
    className="c1 c2"
    onClick={[Function]}
    type="button"
  >
    bar
  </button>
  <button
    className="c1 c2"
    onClick={[Function]}
    type="button"
  >
    bash
  </button>
</div>
`;

exports[`OptionButton rendering matches the expected snapshot when not active 1`] = `
.c0 {
  color: var(--primary-text-color);
  background-color: var(--primary-background-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  padding: 20px 25px;
  width: 100%;
  text-align: left;
  font-size: 1.5rem;
  font-weight: 700;
}

.c0:hover {
  background-color: var(--accent-background-color);
}

<div>
  <button
    className="c0"
    onClick={[Function]}
    type="button"
  >
    LIST IS INACTIVE
  </button>
</div>
`;
